--- a/SegundoSemestre/SegundoSemestre/SegundoSemestre.csproj
+++ b/SegundoSemestre/SegundoSemestre/SegundoSemestre.csproj
@@ -84,11 +84,13 @@
     <Compile Include="DAL\Login.cs" />
     <Compile Include="DAL\Pessoas.cs" />
     <Compile Include="DAL\Veiculos.cs" />
+    <Compile Include="DAL\Viajens.cs" />
     <Compile Include="DTO\Cargos.cs" />
     <Compile Include="DTO\Equipamentos.cs" />
     <Compile Include="DTO\Login.cs" />
     <Compile Include="DTO\Pessoas.cs" />
     <Compile Include="DTO\Veiculos.cs" />
+    <Compile Include="DTO\Viajens.cs" />
     <Compile Include="GUI\frmCargosCadastro.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,6 +108,12 @@
     </Compile>
     <Compile Include="GUI\frmEquipamentosLookup.Designer.cs">
       <DependentUpon>frmEquipamentosLookup.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\frmGaragem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\frmGaragem.Designer.cs">
+      <DependentUpon>frmGaragem.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\frmLogin.cs">
       <SubType>Form</SubType>
@@ -143,6 +151,12 @@
     <Compile Include="GUI\frmPessoasLookup.Designer.cs">
       <DependentUpon>frmPessoasLookup.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\frmRetornoViagem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\frmRetornoViagem.Designer.cs">
+      <DependentUpon>frmRetornoViagem.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\frmSelecionaPessoa.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -161,6 +175,12 @@
     <Compile Include="GUI\frmVeiculosLookup.Designer.cs">
       <DependentUpon>frmVeiculosLookup.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\frmRealizarViajem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\frmRealizarViajem.Designer.cs">
+      <DependentUpon>frmRealizarViajem.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="GUI\frmCargosCadastro.resx">
@@ -171,6 +191,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\frmEquipamentosLookup.resx">
       <DependentUpon>frmEquipamentosLookup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\frmGaragem.resx">
+      <DependentUpon>frmGaragem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
@@ -190,6 +213,9 @@
     <EmbeddedResource Include="GUI\frmPessoasLookup.resx">
       <DependentUpon>frmPessoasLookup.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\frmRetornoViagem.resx">
+      <DependentUpon>frmRetornoViagem.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\frmSelecionaPessoa.resx">
       <DependentUpon>frmSelecionaPessoa.cs</DependentUpon>
     </EmbeddedResource>
@@ -198,6 +224,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\frmVeiculosLookup.resx">
       <DependentUpon>frmVeiculosLookup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\frmRealizarViajem.resx">
+      <DependentUpon>frmRealizarViajem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
